[project]
name = "UMAPandClustering"
version = "0.1.0"
description = "UMAPandClustering, as part of the Medium Article"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "umap>=0.1.1",
    "umap-learn>=0.5.9.post2",
]
